allow varying heights for img, fix caption padding on tablet

--- a/client/src/styles/DetailView.scss
+++ b/client/src/styles/DetailView.scss
@@ -168,19 +168,20 @@
       figure {
         display: inline-block;
         width: 100%;
-        height: 300px;
+        max-height: 300px;
         @include for-phone-only {
-          height: 180px;
+          max-height: 180px;
         }
         img {
           width: 100%;
-          height: 100%;
-          object-fit: cover;
-          object-position: bottom;
+          height: auto;
         }
       }
       figcaption {
         margin: 0;
+        @include for-tablet-landscape-down {
+          padding-left: 2.5rem;
+        }
         @include for-phone-only {
           padding-left: 2rem;
         }
